# remails

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Odoo_notes.md  README.md  TODO.md  askama.toml  build.rs  cert.pem  ci.Dockerfile  debug.yaml  deny.toml  dkim_key.pem  docker-compose.vps.yml  docker-compose.yml  management.Dockerfile  minikube.sh  mta.Dockerfile  package-lock.json  retry.Dockerfile  setup.sh
.github/: dependabot.yaml
.github/problem-matchers/: rust.json
.github/workflows/: build.yaml  checks-backend.yaml  checks-frontend.yaml  checks.yaml  deploy-k8s.yml  deploy.yaml  rollback..yml
.sqlx/: query-007273919d0942e9b2c5b94b854883f9a5b6d6e89309100588615b77eb5b98d8.json  query-01113bb2e199863beec16df49c6b37375ea99df5988f8422be926fbdfc030b24.json  query-02b7a3410835316615af59077ca4981c86b63989baf4fb424d5aafafbb7c8159.json  query-036faff0f71f2a9e4441e847137d127c853d48ef717a12b782cfe16c05bee487.json  query-0507745c56d389ab2d8a6563a27d6a4d1a3597fe5f1c2ccd7964eee189bd82f0.json  query-0531daf7468e9201fabcc22bc8a50d1b5d408cdae2f88f795ca283f926ff40a3.json  query-05f1c611cec5c652dce8c78dd3791301948c0c326bb7abc46b4e65ee553c6060.json  query-067ff62a0e68763b186d6588355a0405daf83b2e178a301aa43b6d902748e1ba.json  query-069f666a147ef968d06b6e12f5f7e3d526f7e805d33622257c384c38a36f40cd.json  query-06afd0ab8e70adb13f695f993e1c537130cf74a39c9c01f539815147b8b27267.json  query-084f5c90114b2c82414bfe235d689182b7b689f506a7d55414ff0dd2a753d9e6.json  query-094187465c1f83d5a031a60b2b123fef6bd95bdcb38ce12558e7b99b1ca801f1.json  query-0973d211a259de9ed158861055c999ca9de0564d4738c2c66b04b4856166ef47.json  query-0a2b4d987a9c91a4b86419453e7f97018d252de9fa4cbab348f6088caee40b09.json  query-0b83e92d7fec626834425579197f6f78f23effc58497b43673789bfc76012ea2.json  query-0ba37b2f107a269ddbdcf66f04a85e5e5bcc8a93005868d133327ae27d68ece8.json  query-0bddc5fac388e6d9393daf7d1b08b1306a937ef8403c52c1f8c83726d593c818.json  query-0c480bd5f1ce38f5ac3c79732f25b35346f967d5d38847a2034a0edc427b9b25.json  query-0cc9bb6661f1b0c8d3aed25d84947b7b058eda8ec0e7192be679fe4511f9ae2d.json  query-0e628d2a337629c51cf8d0c26f06d8343fe85382a05b07daa203c1d713b2ec6a.json  query-0ec616b691522b01aa81593c14945ea3c85bf146d5e80ba6b4048c00dfd958a0.json  query-0f15ed4ddacd4b9b69602c3a938b268d797eb688341934709d5162c55e1935fe.json  query-0f456a65df58c6966c891308c1a1106a294fcffe9baefdb8daf70f9e4d32e150.json  query-0ff30ca9d9c2cf724443b4e15c3481b39e09a5fa4a66d4a5fbd017d3e9c9d9e8.json  query-1025a66c87503f1b8b3442dabd57fdfef95d7a36be73e9646faa41044215136f.json  query-10621142ecab6bd0495d00f5dba52cb5f94457ca711e408570720dc03a45cdb8.json  query-10d0da63de04975330348be009f00fa87da9e949d27fb41f693af7f3b2a35eb8.json  query-115b05e28b8817354d7f9b6a6207c622a5459677f5b73180d2232cc7a5c20160.json  query-115bc4324e0bc0f4e3420c7972d1e9392000a129af73578cac76702ef5e40d5e.json  query-126a09758c705da451987299f172cff2ce83a4bb827bb49916863e4e95b0c73f.json  query-12c3d486470403f08142e7371d6ba59d4a12a3e6c8ac72bb7e70688e1ce99ce9.json  query-13daebd1ac9804ea2ba8c94ec35bf0515d9445f64e0760d9b9f0956b8c4999b9.json  query-13eb02fcf854d2089064df4d63c8df21ed81e69272c0ba33ce793cab4d083345.json  query-14a62a3a727307e357841676756ecff016d7f9f1958a20d0f35edac7043e271d.json  query-14d6f116e96d1a14e4f9012505c65b4fb5054857d28d6c91efe581a96394cd95.json  query-15ae95b4bded1d774667bdcd64b0aea609b1ad84ea4397a5323f6258bfcb472b.json  query-15afcfcecb38dc3b1107e082eacf5d5fdd4b142432167c3df9ce3de022faa698.json  query-15f85d7bc21866ea5c91dd69d87eaf65f7d8568cd2f354630d029a6b66029c24.json  query-161c67e60105d52eaa9291f51bc0c851c2695fdde9955dd8f2246a8efb9547e8.json  query-1765ada4fb0b687eeab3a375fb46b2764efa57f18ec849ca5a969b76e970219e.json  (+424 more)
deploy/: Readme.md  alloy-values.yaml  backup.Dockerfile  backup.sh  cert-issuers.yaml  cert-manager-values.yaml  ci.Dockerfile  grafana-cloud-values.yaml  grafana-values.yaml  loki-values.yaml  prometheus-values.schema.json  scaleway-certmanager-webhook-values.yaml
deploy/cluster-setup/: Chart.yaml  values.yaml
deploy/remails/: Chart.yaml  values.yaml
dev-secrets/: key.pem
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/playwright/: fixtures.ts
frontend/src/: App.tsx  ColorTheme.tsx  Dashboard.tsx  Link.tsx  Loader.tsx  Login.tsx  MessageLog.tsx  Mfa.tsx  Pages.tsx  PasswordReset.tsx  apiMiddleware.ts  main.tsx  notify.tsx  reducer.ts  router.test.ts  router.ts  routes.ts  routes.tsx  types.ts  util.ts
frontend/tests/: adminSettings.spec.ts  basic.spec.ts  fixtures.ts  (+5 more)
migrations/: 20240930143937_initial.sql  20240930143937_users.sql  20250623165910_moneybird.sql  20250626134302_rate_limit.sql  20250627101027_moneybird.sql  20250717100154_max_attempts.sql  20250717143709_connection_log.sql  20250722081556_improved_checks.sql  20250731140149_org_invites.sql  20250822081306_role_refactor.sql  20250903160333_message_notifications.sql  20250909150756_totp.sql  20250910131020_more_roles.sql  20250911095706_store_subscription_status.sql  20251015111458_api_keys.sql  20251020083555_k8s_nodes.sql  20251022124711_email_api.sql  20251030134909_block_organizations.sql  20251111151419_remove_streams.sql  20251127132848_domain_org_id_not_null.sql  20251201133728_message_id_header.sql  20251205095542_global_config.sql  20251205095542_password_reset.sql  20251210130101_block_account_creation.sql  20251212130002_retention_and_statistics.sql  20251222080719_periodic_domain_verification.sql  20260204151229_configurable_retention.sql  20260217102441_multiple_projects_domains.sql  20260302095537_opt_in_plaintext_fallback.sql  20260305102207_token_based_rate_limit.sql  20260309101216_email_suppression_list.sql  20260311155322_block_users.sql  20260325140840_audit_log.sql
remails/: Chart.yaml  Readme.md  values.yaml
src/: connection.rs  fixtures.rs  handler.rs  k8s.rs  lib.rs  main.rs  message.rs  messaging.rs  moneybird.rs  odoo.rs  periodically.rs  server.rs  smtp_credential.rs  test.rs  users.rs
(+270 files in other folders)
