[package]
name = "remails"
version = "0.1.0"
edition = "2024"
default-run = "app"
publish = false

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "management"
path = "src/bin/management.rs"

[[bin]]
name = "mta"
path = "src/bin/mta.rs"

[[bin]]
name = "retry"
path = "src/bin/retry.rs"

[features]
load-fixtures = []

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-private", "typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
mail-parser = { version = "0.11.1", features = ["serde"] }
mail-send = { version = "0.5.2", default-features = false, features = ["builder", "aws-lc-rs", "parser", "dkim"] }
password-auth = "1.0.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
smtp-proto = "0.2.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "chrono", "uuid", "macros", "migrate", "json"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.16", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
oauth2 = { version = "5.0.0" }
http = "1.3.1"
base64ct = "1.8.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "cookies", "charset"] }
cookie = "0.18.1"
email_address = "0.2.9"
memory-serve = "1.2.1"
derive_more = { version = "2.0.1", default-features = false, features = ["from", "display", "deref", "debug", "from_str"] }
rand = "0.9.2"
hickory-resolver = { version = "0.25.2", features = ["tls-aws-lc-rs", "webpki-roots"] }
aws-lc-rs = "1.14.0"
mail-auth = "0.7.1"
rustls-pemfile = "2.2.0"
humansize = "2.1.3"
ppp = "2.3.0"
url = "2.5.4"
totp-rs = { version = "5.7.0", features = ["gen_secret", "qr"] }
garde = { version = "0.22.0", features = ["derive", "regex", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
mailcrab = "1.6.2"

[build-dependencies]
memory-serve = "1.2.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
