[package]
name = "remails"
version = "0.1.0"
edition = "2024"
default-run = "app"
publish = false
description = "A modern mail transfer agent written in Rust"
authors = [
    "Michiel <michiel@tweedegolf.com>",
    "Maximilian Pohl <maximilian@tweedegolf.com>",
    "Marc Schoolderman <marc@tweedegolf.com>",
    "Marlon Baeten <marlon@tweedegolf.com>"
]

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "management"
path = "src/bin/management.rs"

[[bin]]
name = "inbound"
path = "src/bin/inbound.rs"

[[bin]]
name = "outbound"
path = "src/bin/outbound.rs"

[[bin]]
name = "periodic"
path = "src/bin/periodic.rs"

[[bin]]
name = "message_bus"
path = "src/bin/message_bus.rs"

[features]
load-fixtures = []
# Also show OpenAPI docs for internal types and endpoints
internal-api-docs = []

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros", "ws"] }
axum-extra = { version = "0.12.2", features = ["cookie-private", "typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
mail-parser = { version = "0.11.1", features = ["serde"] }
mail-send = { version = "0.5.2", default-features = false, features = ["builder", "aws-lc-rs", "parser", "dkim"] }
mail-auth = "0.7.1"
mail-builder = "0.4.4"
password-auth = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
smtp-proto = "0.2.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "chrono", "uuid", "macros", "migrate", "json", "ipnet"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
futures = "0.3.31"
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.17", features = ["io"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6.6", features = ["trace", "timeout", "limit", "compression-br", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
oauth2 = { version = "5.0.0" }
http = "1.3.1"
base64ct = "1.8.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "cookies", "charset"] }
cookie = "0.18.1"
email_address = { version = "0.2.9" , git = "https://github.com/pohlm01/rust-email_address.git", features = ["utoipa"]}
memory-serve = "1.2.2"
derive_more = { version = "2.0.1", default-features = false, features = ["from", "display", "deref", "debug", "from_str"] }
rand = "0.9.2"
hickory-resolver = { version = "0.25.2", features = ["tls-aws-lc-rs", "webpki-roots"] }
aws-lc-rs = "1.15.0"
rustls-pemfile = "2.2.0"
humansize = "2.1.3"
ppp = "2.3.0"
url = "2.5.4"
totp-rs = { version = "5.7.0", features = ["gen_secret", "qr"] }
garde = { version = "0.22.0", features = ["derive", "regex", "serde", "email"] }
async-trait = "0.1.89"
async-stream = "0.3.6"
if-addrs = "0.14.0"
kube = { version = "2.0.1", default-features = false, features = ["client", "rustls-tls", "aws-lc-rs", "runtime"] }
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
utoipa = { version = "5", features = ["chrono", "uuid", "axum_extras", "url"] }
utoipa-axum = "0.2"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
mailcrab = "1.6.2"
tracing-test = "0.2.5"

[build-dependencies]
memory-serve = "1.2.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
